--- a/wwr/index.html
+++ b/wwr/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
-    <!--<meta name="author" content="Arunas Rancevas"> added it,maybe for future? It was mentioned in the lesson.-->
+    <meta name="author" content="Arunas Rancevas">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
