--- a/goodness/site-plan.html
+++ b/goodness/site-plan.html
@@ -88,7 +88,7 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
+        <a href="#">Pictures</a>
         <a href="#">Page3</a>
       </nav>
       <hr>
@@ -100,10 +100,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          [Pictures] <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          [Quotes]  <!-- change this -->
         </div>
 
         <div class="top">
@@ -125,29 +125,61 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Wellcome to goodness dot com! A website dedicated to good vibes, inspirational quotes, and uplifting pictures. Everything and anything to make your day at least a little bit better.
+        Goodness was founded during WW2, when general public was living through the horrors of war. One of our founding fathers, 
+        Dexter Bateman was a lieutenant in the army during WW1. Legend says that during cold winter of 1917, we was gifted one bar of homemade chocolate by a private who received it from his wife via mail. 
+        For a lieutenant this was not a lot- just one bar of chocolate; but the humble act greatly inspired him and helped him realise that it does not take a lot to share good vibes and positivity. 
+        During the next World War, the company was founded by group of influential veterans and philanthropists from various backgrounds, be it industrialists or Hollywood stars. 
+        Our goal since there is spread of positivity via positive cartoons, stuffed animals, colourful blankets or notebooks, visually pleasing items like cosy pillows and cups, colourful shirts or refrigerator magnets.
+        On our modern website you can see comfy pictures- be it for one time or to download as wallpaper as well as read inspiration quotes. 
+
+        Here are what other people tell about us.
+        “I work as firefighter. This line of work is very stressful. Whenever I need inspiration, I go to goodness.com and daily quote always brightens my day”.
+        Roger Stevenson
+
+        “I served my Mission in grumpy east European Country. People were cold and very closed. Whenever I felt down, I visited goodness.com. Every quote here was inspirational and uplifting. It helped me immensely”.
+        Andrew Smith, LDS missionary
+        “During last few weeks I had to survive break up, and five exams. Whenever I saw  the wallpaper I found on goodness.com, it helped me to calm down and concentrate on task at hand.”
+        Stacy McAdams
+
+        “As a mother, goodness is the best place for positive and work friendly internet content on the internet. It is save from harmful content. All the wallpapers or inspiration quotes are very good.”
+        Rachel Smith, mother of two
+        On our modern website you can see comfy pictures- be it for one time or to download as wallpaper as well as read inspiration quotes. 
+
+        Please click here to go to picture section of the website.
+
+        Please click here to go to the quote section of the website.
+        
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/tea.jpg" alt="image for homepage">
+        <img src="images/teddy.jpg" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Pictures</h3>
       <p>
-        [Written copy for the Page 2 here]
+        “A picture is worth a thousand words”
+        Welcome to our page dedicated to inspirational pictures.
+        Here every three days you can find selected uplifting pictures ranging from science (like space rockets) to spirituality(like old European Churches or LDS temples).
+         From nature to architecture. From stuffed animals to cup pictures. 
+         All the pictures are non-copyrighter. Users are more than welcome to print them and take inspiration for personalised pillows, cups or even phone cases.
+
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/mountains.jpg" alt="image for page">
+        <img src="images/utah.jpg" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>[Quotes]</h3>
       <p>
-        [Written copy for the Page 3 here]
+        "For many of us, inspiration is triggered by the quips and quotations of others." Emilee Day, The Complete Book of Inspirational Quotations. 
+        Welcome to our page dedicated to inspirational quotes. Here every three days you can find selected inspirational quotes ranging from science to spirituality.
+         From books and movies. From Church and community leaders to politicians and inspirational figures.
+         All the quotes here are non-copyrighter. Users are welcome to save them, or even print them as they like.
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/hinckley.jpg" alt="Quote by President Hinckley ">
+        <img src="images/nephi.jpg" alt="Quote from Book of Nephi">
 
       </ul>
       <hr>
@@ -167,13 +199,13 @@
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="#" alt="Pictures  wireframe">
 
       <h3>[Page 3]</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="#" alt="Quotes wireframe">
     </main>
   </body>
 
