--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -121,7 +121,7 @@
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
-    <h3>[FAQ page]</h3>
+    <h3>FAQ page</h3>
 
     <img src="images/wireframe.jpg" alt="FAQ page wireframe" />
 
