--- a/goodness/site-plan.html
+++ b/goodness/site-plan.html
@@ -165,19 +165,19 @@
          All the pictures are non-copyrighter. Users are more than welcome to print them and take inspiration for personalised pillows, cups or even phone cases.
 
       </p>
-      <p>Images for the Page 2</p>
-        <img src="images/mountains.jpg" alt="image for page">
-        <img src="images/utah.jpg" alt="image for page">
+      <p>Images for the Page 2/The picture page</p>
+        <img src="images/mountains.jpg" alt="image of a mountains ">
+        <img src="images/utah.jpg" alt="image of utah mountains ">
 
       </ul>
-      <h3>[Quotes]</h3>
+      <h3>Quotes</h3>
       <p>
         "For many of us, inspiration is triggered by the quips and quotations of others." Emilee Day, The Complete Book of Inspirational Quotations. 
         Welcome to our page dedicated to inspirational quotes. Here every three days you can find selected inspirational quotes ranging from science to spirituality.
          From books and movies. From Church and community leaders to politicians and inspirational figures.
          All the quotes here are non-copyrighter. Users are welcome to save them, or even print them as they like.
       </p>
-      <p>Images for the Page 3</p>
+      <p>Images for the Page 3/The quote page</p>
         <img src="images/hinckley.jpg" alt="Quote by President Hinckley ">
         <img src="images/nephi.jpg" alt="Quote from Book of Nephi">
 
