--- a/goodness/site-plan.html
+++ b/goodness/site-plan.html
@@ -89,7 +89,7 @@
       <nav>
         <a href="#">Home</a>
         <a href="#">Pictures</a>
-        <a href="#">Page3</a>
+        <a href="#">Quotes</a>
       </nav>
       <hr>
       <h2>
