--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -96,7 +96,7 @@
     <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
     <nav>
       <a href="#">Home</a>
-      <a href="#">Page2</a>
+      <a href="#">FAQ</a>
       <a href="#">Contact Us</a>
     </nav>
     <hr />
@@ -125,7 +125,6 @@
 
     <img src="images/wireframe.jpg" alt="FAQ page wireframe" />
 
-    <!-- <img src="#" alt="page 2 wireframe"> -->
   </main>
 </body>
 
