--- a/wwr/faq.html
+++ b/wwr/faq.html
@@ -16,7 +16,7 @@
             </a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="faq.html">Frequently Asked Question</a>
+                <a href="faq.html">Frequently Asked Questions</a>
                 <a href="site-plan-rafting.html">Site Plan</a>
                 <a href="contactus.html">Contact Us</a>
             </nav>
@@ -33,7 +33,7 @@
                 </div>
             </section>
         </div>
-        <main id="faq-main">
+        <main id="faq-page">
             <section id="faq-links">
                 <h1>FAQ</h1>
                 <a href="#question-one" class="faq-question-link"><p>Is this a good trip for kids? What are the age ranges you allow?</p></a>
@@ -63,7 +63,7 @@
                 </div>
                 <div class="faq-question">
                     <h2 id="question-five">What is so great about whitewater rafting anyway?</h2>
-                    <p>Are you kidding me? What's not great about whitewater rafting!...Let's describe a common day on the river.<br><br>Arise in the soft light of the early morning after a night spent sleeping under a beautiful starry sky. Have a hearty warm breakfast of fresh blueberry pancakes or omelets to order, then pack your things and prepare for the day. The day is filled with some combination of swift water, rapids, calms, hikes, history, geology, stories, and more good food. We try to hit camp around 4 or 5, after setting up your cot you can relax with a good book or good company by the river, or explore around camp while your guides prepare your dinner...something perhaps like steak and potatoes, or grilled salmon...and dutch oven brownies...you won't forget the dutch oven brownies. After dinner it's more relaxing, and you might even be able to talk your guide into another story or two to send you off to bed under more stars than you thought were possible. </p>
+                    <p>Are you kidding me! What's not great about whitewater rafting!...Let's describe a common day on the river.<br><br>Arise in the soft light of the early morning after a night spent sleeping under a beautiful starry sky. Have a hearty warm breakfast of fresh blueberry pancakes or omelets to order, then pack your things and prepare for the day. The day is filled with some combination of swift water, rapids, calms, hikes, history, geology, stories, and more good food. We try to hit camp around 4 or 5, after setting up your cot you can relax with a good book or good company by the river, or explore around camp while your guides prepare your dinner...something perhaps like steak and potatoes, or grilled salmon...and dutch oven brownies...you won't forget the dutch oven brownies. After dinner it's more relaxing, and you might even be able to talk your guide into another story or two to send you off to bed under more stars than you thought were possible. </p>
                 </div>
                 <div class="faq-question">
                     <h2 id="question-six">How far in advance should I book my trip?</h2>
@@ -77,13 +77,13 @@
             <p><a href="contactus.html">Contact Us</a></p>
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
-                    <img src="images/facebook.png" alt="fb icon">
+                <img src="images/facebook.png" alt="fb icon">
                 </a>
                 <a href="https://twitter.com" target="_blank">
-                    <img src="images/twitter.png" alt="twitter icon">
+                <img src="images/twitter.png" alt="twitter icon">
                 </a>
                 <a href="https://instagram.com" target="_blank">
-                    <img src="images/instagram.png" alt="instagram icon">
+                <img src="images/instagram.png" alt="instagram icon">
                 </a>
             </div>
             </footer>
