--- a/wwr/faq.html
+++ b/wwr/faq.html
@@ -22,8 +22,8 @@
             </nav>
         </header>
         <div id="hero">
-            <div id="hero-box">
-                <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
+            <div id="hero-box-two">
+                <img id="hero-img" src="images/herotwo.jpg" alt="People enjoying white water rafting with awesome view of mountains">
             </div>
             <section id="hero-msg">
                 <h1 class="home-title">Have An Adventure</h1>
@@ -70,6 +70,7 @@
                     <p>If you have specific dates you need, we recommend booking a year in advance. If you can be more flexible 6 months in advance is usually sufficient. </p>
                 </div>
             </section>
+        </main>
 
         <footer>
             <p>Dry Oar &copy; 2023 - Arunas Rancevas</p>
