--- a/goodness/site-plan.html
+++ b/goodness/site-plan.html
@@ -152,7 +152,7 @@
         
       </p>
       <p>Images for the Home page</p>
-        <img src="images/tea.jpg" alt="image for homepage">
+        <img src="images/cacao.jpg" alt="image for homepage">
         <img src="images/teddy.jpg" alt="image for homepage">
 
       </ul>
@@ -191,21 +191,21 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        A home page will feature desciption of the page. Bellow the descirption, there will be two pictures with links to the other two pages. The links will also be found on the header and footer.
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/homepage.png" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Quotes</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        A quote page will most likely be a flex. The page will feature desciption of the page, and bellow it inspirational quotes.It will feature quotes in writen and/or picture format. A flex will be just a one line, hence the flex, and no the grid.The header and footer will be the same on all three pages.
       </p>
-      <img src="#" alt="Pictures  wireframe">
+      <img src="images/quotes.png" alt="Pictures  wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Pictures</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        A picture page will feature a 2x3 grid with pictures. On top of the page there will be the desciption of the page. Bellow the desciption, there will be the afermentioned grid of with six pictures. The header and footer will be the same on all three pages.
       </p>
-      <img src="#" alt="Quotes wireframe">
+      <img src="images/pictures.png" alt="Quotes wireframe">
     </main>
   </body>
 
