--- a/goodness/pictures.html
+++ b/goodness/pictures.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Goodness | Home</title>
+    <title> Goodness | Pictures</title>
     <meta name="author" content="Arunas Rancevas">
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
     <div id="content">
-    <header>
+    <header id="navigation">
         <a id="logo_link" href="index.html">
             <img class="logo" src="images/logo.png" alt="Goodness Logo">
         </a>
@@ -22,23 +23,45 @@
         </nav>
     </header>
 
-
-
-    <footer>
-        <p>Goodness &copy; 2023 - Arunas Rancevas</p>
-        <p><a href="site-plan.html">Site Plan</a></p>
-        <p><a href="contactus.html">Contact Us</a></p>
-        <div class="social-media">
-            <a href="https://facebook.com" target="_blank">
-                <img src="images/facebook.png" alt="fb icon">
-            </a>
-            <a href="https://twitter.com" target="_blank">
-                <img src="images/twitter.png" alt="twitter icon">
-            </a>
-            <a href="https://instagram.com" target="_blank">
-                <img src="images/instagram.png" alt="instagram icon">
-            </a>
+    <main class="pictures-page">
+        <section id="goodness-motto">
+        <h1>Goodness</h1>
+        <h2>Positive experience for everyday!</h2>
+        </section>
+        <section id="about">
+            <h2>About picture page</h2>
+            <p>
+                “A picture is worth a thousand words”
+                Welcome to our page dedicated to inspirational pictures.
+                Here every three days you can find selected uplifting pictures ranging from science (like space rockets) to spirituality(like old European Churches or LDS temples).
+                From nature to architecture. From stuffed animals to cup pictures. 
+                All the pictures are non-copyrighter. Users are more than welcome to print them and take inspiration for personalised pillows, cups or even phone cases.
+              </p>
+        </section>
+        <section id="pictures-grid">
+            <img class="card-img" src="images/cub.jpg" alt="A lion cub">
+            <img class="card-img" src="images/lionn.jpg" alt="A teddy lion">
+            <img class="card-img" src="images/teddy.jpg" alt="A teddy bear">
+            <img class="card-img" src="images/blanket.jpg" alt="A comfy blanket">
+            <img class="card-img" src="images/cacao.jpg" alt="A cup of cacao ">
+            <img class="card-img" src="images/cup.jpg" alt="A comfy cup">
+        </section>
+        
+        <footer>
+            <p>Goodness &copy; 2023 - Arunas Rancevas</p>
+            <p><a href="site-plan.html">Site Plan</a></p>
+            <p><a href="contactus.html">Contact Us</a></p>
+            <div class="social-media">
+                <a href="https://facebook.com" target="_blank">
+                    <img src="images/facebook.png" alt="fb icon">
+                </a>
+                <a href="https://twitter.com" target="_blank">
+                    <img src="images/twitter.png" alt="twitter icon">
+                </a>
+                <a href="https://instagram.com" target="_blank">
+                    <img src="images/instagram.png" alt="instagram icon">
+                </a>
+            </div>
+            </footer>
         </div>
-        </footer>
-    </div>
-</body>  
+    </body>  
