--- a/goodness/quotes.html
+++ b/goodness/quotes.html
@@ -4,25 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Goodness | Home</title>
+    <title> Goodness | Quotes</title>
     <meta name="author" content="Arunas Rancevas">
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
     <div id="content">
-    <header>
+    <header id="navigation">
         <a id="logo_link" href="index.html">
             <img class="logo" src="images/logo.png" alt="Goodness Logo">
         </a>
         <nav>
             <a href="index.html">Home</a>
-            <a href="pictures.html">pictures</a>
-            <a href="quotes.html">quotes</a>
+            <a href="pictures.html">Pictures</a>
+            <a href="quotes.html">Quotes</a>
             <a href="contactus.html">Contact Us</a>
         </nav>
     </header>
 
-
+    <main class="quotes-page">
+        <section id="goodness-motto">
+        <h1>Goodness</h1>
+        <h2>Positive experience for everyday!</h2>
+        </section>
+        <section id="about">
+            <h2>About quote page</h2>
+            <p>
+                "For many of us, inspiration is triggered by the quips and quotations of others." Emilee Day, The Complete Book of Inspirational Quotations. 
+                Welcome to our page dedicated to inspirational quotes. Here every three days you can find selected inspirational quotes ranging from science to spirituality.
+                From books and movies. From Church and community leaders to politicians and inspirational figures.
+                All the quotes here are non-copyrighter. Users are welcome to save them, or even print them as they like.
+              </p>
+        </section>
+        <section id="Goodness-quotes">
+            <p>“Success is no accident. It is hard work, perseverance, learning, studying, sacrifice and most of all, love of what you are doing or learning to do.”</p>
+            <h4>Pelé, Brazillian pro footballer</h4>
+            <p>“The only place where success comes before work is in the dictionary.”</p>
+            <h4>Vidal Sassoon, hairstylist and philanthropist</h4>
+            <p>“I find that the harder I work, the more luck I seem to have.”</p>
+            <h4>Thomas Jefferson, 3rd US president</h4>
+        </section>
+        <section id="picture-in-quotes">
+        <img class="card-img" src="images/quote.png" alt="Arguably the most important line in the Bible">
+        </section>
 
     <footer>
         <p>Goodness &copy; 2023 - Arunas Rancevas</p>
