--- a/goodness/index.html
+++ b/goodness/index.html
@@ -8,35 +8,39 @@
     <meta name="author" content="Arunas Rancevas">
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
     <div id="content">
-    <header>
+    <header id="navigation">
         <a id="logo_link" href="index.html">
             <img class="logo" src="images/logo.png" alt="Goodness Logo">
         </a>
         <nav>
             <a href="index.html">Home</a>
-            <a href="pictures.html">pictures</a>
-            <a href="quotes.html">quotes</a>
+            <a href="pictures.html">Pictures</a>
+            <a href="quotes.html">Quotes</a>
             <a href="contactus.html">Contact Us</a>
         </nav>
     </header>
-    <main class="index-grid">
-        <section class="rivers-card">
-
+    
+    <main class="index-page">
+        <section id="goodness-motto">
+        <h1>Goodness</h1>
+        <h2>Positive experience for everyday!</h2>
         </section>
-        <section class="camping-card">
-            <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
-            <img class="icon" src="images/fire_icon.png" alt="fire icon">
-            <h2>Camping</h2>
+        <section id="about">
+            <h2>About us</h2>
+            <p> Wellcome to goodness.com! A website dedicated to good vibes, inspirational quotes, and uplifting pictures. 
+                Everything and anything to make your day at least a little bit better.</p>
         </section>
-        <section class="rapids-card">
-            <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
-            <img class="icon" src="images/oars.png" alt="oars icon">
-            <h2>Rapids</h2>
+        <p></p>
+        <section id="grid-in-index">
+            <a href="pictures.html"><img class="card-img" src="images/pictures.jpg" alt="Lion teddy">
+            <h2>Please click here to enter the page with cool and uplifitng pictures</h2></a>
+            <a href="quotes.html"><img class="card-img" src="images/quotes.jpg" alt="A thinking man">
+            <h2>Please click here to enter the page with thought provoking and uplifitng quotes</h2></a>
         </section>
     </main>
-
 
     <footer>
         <p>Goodness &copy; 2023 - Arunas Rancevas</p>
