--- a/goodness/site-plan.html
+++ b/goodness/site-plan.html
@@ -153,7 +153,7 @@
       </p>
       <p>Images for the Home page</p>
         <img src="images/cacao.jpg" alt="image for homepage">
-        <img src="images/teddy.jpg" alt="image for homepage">
+        <img src="images/pictures.jpg" alt="image for homepage">
 
       </ul>
       <h3>Pictures</h3>
@@ -163,11 +163,10 @@
         Here every three days you can find selected uplifting pictures ranging from science (like space rockets) to spirituality(like old European Churches or LDS temples).
          From nature to architecture. From stuffed animals to cup pictures. 
          All the pictures are non-copyrighter. Users are more than welcome to print them and take inspiration for personalised pillows, cups or even phone cases.
-
       </p>
       <p>Images for the Page 2/The picture page</p>
-        <img src="images/mountains.jpg" alt="image of a mountains ">
-        <img src="images/utah.jpg" alt="image of utah mountains ">
+        <img src="images/cub.jpg" alt="A lion cub">
+        <img src="images/cup.jpg" alt="Cute cup">
 
       </ul>
       <h3>Quotes</h3>
@@ -178,8 +177,8 @@
          All the quotes here are non-copyrighter. Users are welcome to save them, or even print them as they like.
       </p>
       <p>Images for the Page 3/The quote page</p>
-        <img src="images/hinckley.jpg" alt="Quote by President Hinckley ">
-        <img src="images/nephi.jpg" alt="Quote from Book of Nephi">
+        <img src="images/quotes.jpg" alt="Thinking man">
+        <img src="images/quote.png" alt="Quote from the Bible">
 
       </ul>
       <hr>
@@ -199,7 +198,7 @@
       <p>         
         A quote page will most likely be a flex. The page will feature desciption of the page, and bellow it inspirational quotes.It will feature quotes in writen and/or picture format. A flex will be just a one line, hence the flex, and no the grid.The header and footer will be the same on all three pages.
       </p>
-      <img src="images/quotes.png" alt="Pictures  wireframe">
+      <img src="images/quotess.png" alt="Pictures  wireframe">
 
       <h3>Pictures</h3>
       <p>         
