Few small edits

--- a/goodness/site-plan.html
+++ b/goodness/site-plan.html
@@ -153,7 +153,7 @@
       </p>
       <p>Images for the Home page</p>
         <img src="images/cacao.jpg" alt="image for homepage">
-        <img src="images/pictures.jpg" alt="image for homepage">
+        <img src="images/selfie.jpg" alt="image for homepage">
 
       </ul>
       <h3>Pictures</h3>
