--- a/goodness/index.html
+++ b/goodness/index.html
@@ -30,15 +30,15 @@
         </section>
         <section id="about">
             <h2>About us</h2>
-            <p> Wellcome to goodness.com! A website dedicated to good vibes, inspirational quotes, and uplifting pictures. 
+            <p> Welcome to goodness.com! A website dedicated to good vibes, inspirational quotes, and uplifting pictures. 
                 Everything and anything to make your day at least a little bit better.</p>
         </section>
         <p></p>
         <section id="grid-in-index">
-            <a href="pictures.html"><img class="card-img" src="images/pictures.jpg" alt="Lion teddy">
-            <h2>Please click here to enter the page with cool and uplifitng pictures</h2></a>
-            <a href="quotes.html"><img class="card-img" src="images/quotes.jpg" alt="A thinking man">
-            <h2>Please click here to enter the page with thought provoking and uplifitng quotes</h2></a>
+            <a href="pictures.html"><img class="card-img" src="images/selfie.jpg" alt="Lion cub selfie">
+            <p>Please click here to enter page with uplifitng and exiting pictures.</p></a>
+            <a href="quotes.html"><img class="card-img" src="images/quotes.jpg" alt="Thinking man">
+            <p>Please click here to enter page with uplifitng and mindfull quotes.</p></a>
         </section>
     </main>
 
