--- a/goodness/pictures.html
+++ b/goodness/pictures.html
@@ -38,14 +38,15 @@
                 All the pictures are non-copyrighter. Users are more than welcome to print them and take inspiration for personalised pillows, cups or even phone cases.
               </p>
         </section>
-        <section id="pictures-grid">
+        <div id="pictures-grid">
             <img class="card-img" src="images/cub.jpg" alt="A lion cub">
             <img class="card-img" src="images/lionn.jpg" alt="A teddy lion">
             <img class="card-img" src="images/teddy.jpg" alt="A teddy bear">
             <img class="card-img" src="images/blanket.jpg" alt="A comfy blanket">
             <img class="card-img" src="images/cacao.jpg" alt="A cup of cacao ">
             <img class="card-img" src="images/cup.jpg" alt="A comfy cup">
-        </section>
+        </div>
+        </main>
         
         <footer>
             <p>Goodness &copy; 2023 - Arunas Rancevas</p>
