--- a/goodness/quotes.html
+++ b/goodness/quotes.html
@@ -38,7 +38,7 @@
                 All the quotes here are non-copyrighter. Users are welcome to save them, or even print them as they like.
               </p>
         </section>
-        <section id="goodness-quotes">
+        <div id="goodness-quotes">
             <section id="quote-1">
             <p>“Success is no accident. It is hard work, perseverance, learning, studying, sacrifice and most of all, love of what you are doing or learning to do.”</p>
             <h4>Pelé, Brazillian pro footballer</h4>
@@ -54,8 +54,9 @@
         </section>
         <section id="picture-in-quotes">
         <img id="picture-img" src="images/quote.png" alt="Arguably the most important line in the Bible">
-        </section>
-
+        </div>
+        </main>
+        
     <footer>
         <p>Goodness &copy; 2023 - Arunas Rancevas</p>
         <p><a href="site-plan.html">Site Plan</a></p>
@@ -71,6 +72,6 @@
                 <img src="images/instagram.png" alt="instagram icon">
             </a>
         </div>
-        </footer>
+    </footer>
     </div>
 </body>  
