--- a/goodness/site-plan.html
+++ b/goodness/site-plan.html
@@ -196,13 +196,13 @@
 
       <h3>Quotes</h3>
       <p>         
-        A quote page will most likely be a flex. The page will feature desciption of the page, and bellow it inspirational quotes.It will feature quotes in writen and/or picture format. A flex will be just a one line, hence the flex, and no the grid.The header and footer will be the same on all three pages.
+        A quote page will most likely be a flex(flex is a bit different than what I thought it was, so I used grid). The page will feature desciption of the page, and bellow it inspirational quotes.It will feature quotes in writen and/or picture format. A flex will be just a one line, hence the flex, and no the grid.The header and footer will be the same on all three pages.
       </p>
       <img src="images/quotess.png" alt="Pictures  wireframe">
 
       <h3>Pictures</h3>
       <p>         
-        A picture page will feature a 2x3 grid with pictures. On top of the page there will be the desciption of the page. Bellow the desciption, there will be the afermentioned grid of with six pictures. The header and footer will be the same on all three pages.
+        A picture page will feature a 3x2 (original plan was2x3) grid with pictures. On top of the page there will be the desciption of the page. Bellow the desciption, there will be the afermentioned grid of with six pictures. The header and footer will be the same on all three pages.
       </p>
       <img src="images/pictures.png" alt="Quotes wireframe">
     </main>
