--- a/goodness/quotes.html
+++ b/goodness/quotes.html
@@ -51,9 +51,9 @@
             <p>“I find that the harder I work, the more luck I seem to have.”</p>
             <h4>Thomas Jefferson, 3rd US president</h4>
             </section>
-        </section>
-        <section id="picture-in-quotes">
+        <div id="picture-in-quotes">
         <img id="picture-img" src="images/quote.png" alt="Arguably the most important line in the Bible">
+        </div>
         </div>
         </main>
         
