--- a/goodness/quotes.html
+++ b/goodness/quotes.html
@@ -33,26 +33,26 @@
             <p>
                 "For many of us, inspiration is triggered by the quips and quotations of others." Emilee Day, The Complete Book of Inspirational Quotations. 
                 <br>
-                Welcome to our page dedicated to inspirational quotes. Here every three days you can find selected inspirational quotes ranging from science to spirituality.
+                Welcome to our page dedicated to inspirational quotes. Here, every three days, you can find selected inspirational quotes ranging from science to spirituality.
                 From books and movies. From Church and community leaders to politicians and inspirational figures.
-                All the quotes here are non-copyrighter. Users are welcome to save them, or even print them as they like.
+                All the quotes here are non-copyrighted. Users are welcome to save them, or even print them as they like.
               </p>
         </section>
         <div id="goodness-quotes">
             <section id="quote-1">
-            <p>“Success is no accident. It is hard work, perseverance, learning, studying, sacrifice and most of all, love of what you are doing or learning to do.”</p>
-            <h4>Pelé, Brazillian pro footballer</h4>
+            <p>“I find that the harder I work, the more luck I seem to have.”</p>
+            <h4>Thomas Jefferson, 3rd US president</h4>
             </section>
             <section id="quote-2">
             <p>“The only place where success comes before work is in the dictionary.”</p>
             <h4>Vidal Sassoon, hairstylist and philanthropist</h4>
             </section>
             <section id="quote-3">
-            <p>“I find that the harder I work, the more luck I seem to have.”</p>
-            <h4>Thomas Jefferson, 3rd US president</h4>
+            <p>"Success is no accident. It is hard work, perseverance, learning, studying, sacrifice and most of all, love of what you are doing or learning to do."</p>
+            <h4>Pelé, Brazillian pro footballer</h4>
             </section>
         <div id="picture-in-quotes">
-        <img id="picture-img" src="images/quote.png" alt="Arguably the most important line in the Bible">
+        <img id="picture-img" src="images/quote.png" alt="Arguably the most important verse in the Bible">
         </div>
         </div>
         </main>
