--- a/goodness/site-plan.html
+++ b/goodness/site-plan.html
@@ -125,27 +125,10 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        Wellcome to goodness dot com! A website dedicated to good vibes, inspirational quotes, and uplifting pictures. Everything and anything to make your day at least a little bit better.
-        Goodness was founded during WW2, when general public was living through the horrors of war. One of our founding fathers, 
-        Dexter Bateman was a lieutenant in the army during WW1. Legend says that during cold winter of 1917, we was gifted one bar of homemade chocolate by a private who received it from his wife via mail. 
-        For a lieutenant this was not a lot- just one bar of chocolate; but the humble act greatly inspired him and helped him realise that it does not take a lot to share good vibes and positivity. 
-        During the next World War, the company was founded by group of influential veterans and philanthropists from various backgrounds, be it industrialists or Hollywood stars. 
-        Our goal since there is spread of positivity via positive cartoons, stuffed animals, colourful blankets or notebooks, visually pleasing items like cosy pillows and cups, colourful shirts or refrigerator magnets.
-        On our modern website you can see comfy pictures- be it for one time or to download as wallpaper as well as read inspiration quotes. 
-
-        Here are what other people tell about us.
-        “I work as firefighter. This line of work is very stressful. Whenever I need inspiration, I go to goodness.com and daily quote always brightens my day”.
-        Roger Stevenson
-
-        “I served my Mission in grumpy east European Country. People were cold and very closed. Whenever I felt down, I visited goodness.com. Every quote here was inspirational and uplifting. It helped me immensely”.
-        Andrew Smith, LDS missionary
-        “During last few weeks I had to survive break up, and five exams. Whenever I saw  the wallpaper I found on goodness.com, it helped me to calm down and concentrate on task at hand.”
-        Stacy McAdams
-
-        “As a mother, goodness is the best place for positive and work friendly internet content on the internet. It is save from harmful content. All the wallpapers or inspiration quotes are very good.”
-        Rachel Smith, mother of two
-        On our modern website you can see comfy pictures- be it for one time or to download as wallpaper as well as read inspiration quotes. 
-
+        Welcome to goodness.com! A website dedicated to good vibes. Here you can find inspirational quotes, and uplifting pictures.
+        Every day you can find tailor made content just for you.
+        Everything and anything to make your day at least a little bit better.
+        
         Please click here to go to picture section of the website.
 
         Please click here to go to the quote section of the website.
