--- a/goodness/index.html
+++ b/goodness/index.html
@@ -30,15 +30,15 @@
         </section>
         <section id="about">
             <h2>About us</h2>
-            <p> Welcome to goodness.com! A website dedicated to good vibes, inspirational quotes, and uplifting pictures. 
+            <p> Welcome to goodness.com! A website dedicated to good vibes. Here you can find inspirational quotes, and uplifting pictures.
+                Every day you can find tailor made content just for you.
                 Everything and anything to make your day at least a little bit better.</p>
         </section>
-        <p></p>
         <section id="grid-in-index">
             <a href="pictures.html"><img class="card-img" src="images/selfie.jpg" alt="Lion cub selfie">
-            <p>Please click here to enter page with uplifitng and exiting pictures.</p></a>
+            <p>Please click here to enter page with uplifting and exciting pictures.</p></a>
             <a href="quotes.html"><img class="card-img" src="images/quotes.jpg" alt="Thinking man">
-            <p>Please click here to enter page with uplifitng and mindfull quotes.</p></a>
+            <p>Please click here to enter page with inspiring and mindful quotes.</p></a>
         </section>
     </main>
 
