--- a/goodness/quotes.html
+++ b/goodness/quotes.html
@@ -38,19 +38,21 @@
                 All the quotes here are non-copyrighted. Users are welcome to save them, or even print them as they like.
               </p>
         </section>
+        <br>
         <div id="goodness-quotes">
             <section id="quote-1">
             <p>“I find that the harder I work, the more luck I seem to have.”</p>
-            <h4>Thomas Jefferson, 3rd US president</h4>
+            <h4><em>Thomas Jefferson, 3rd US president</em></h4>
             </section>
             <section id="quote-2">
             <p>“The only place where success comes before work is in the dictionary.”</p>
-            <h4>Vidal Sassoon, hairstylist and philanthropist</h4>
+            <h4><em>Vidal Sassoon, hairstylist and philanthropist</em></h4>
             </section>
             <section id="quote-3">
             <p>"Success is no accident. It is hard work, perseverance, learning, studying, sacrifice and most of all, love of what you are doing or learning to do."</p>
-            <h4>Pelé, Brazillian pro footballer</h4>
+            <h4><em>Pelé, Brazillian pro footballer</em></h4>
             </section>
+            <br>
         <div id="picture-in-quotes">
         <img id="picture-img" src="images/quote.png" alt="Arguably the most important verse in the Bible">
         </div>
