changes for job hunt

--- a/goodness/index.html
+++ b/goodness/index.html
@@ -30,9 +30,7 @@
         </section>
         <section id="about">
             <h2>About us</h2>
-            <p> Welcome to goodness.com! A website dedicated to good vibes. Here you can find inspirational quotes, and uplifting pictures.
-                Every day you can find tailor made content just for you.
-                Everything and anything to make your day at least a little bit better.</p>
+            <p> Welcome to goodness.com! A website dedicated to showcasing my front end skills as well as power of CSS Flexbox and JavaScript.</p>
         </section>
         <section id="grid-in-index">
             <a href="pictures.html"><img class="card-img" src="images/selfie.jpg" alt="Lion cub selfie">
