--- a/goodness/pictures.html
+++ b/goodness/pictures.html
@@ -32,10 +32,7 @@
             <h2>About picture page</h2>
             <p>
                 “A picture is worth a thousand words”
-                Welcome to our page dedicated to inspirational pictures.
-                Here every three days, you can find selected uplifting pictures ranging from science (like space rockets) to spirituality (like old European Churches or LDS temples).
-                From nature to architecture. From stuffed animals to pictures of cups.
-                All the pictures are non-copyrighted. Users are more than welcome to print them and take inspiration for personalized pillows, cups, or even phone cases.
+                Welcome to  page dedicated to inspirational pictures and for showcasing the power and flexibility of CSS.
               </p>
         </section>
         <div id="pictures-grid">
