--- a/goodness/quotes.html
+++ b/goodness/quotes.html
@@ -33,9 +33,7 @@
             <p>
                 "For many of us, inspiration is triggered by the quips and quotations of others." Emilee Day, The Complete Book of Inspirational Quotations. 
                 <br>
-                Welcome to our page dedicated to inspirational quotes. Here, every three days, you can find selected inspirational quotes ranging from science to spirituality.
-                From books and movies. From Church and community leaders to politicians and inspirational figures.
-                All the quotes here are non-copyrighted. Users are welcome to save them, or even print them as they like.
+                Welcome to  page dedicated to inspirational quotes and showcasing underated flexibility of CSS when working with text. 
               </p>
         </section>
         <br>
