--- a/goodness/site-plan.html
+++ b/goodness/site-plan.html
@@ -125,9 +125,7 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        Welcome to goodness.com! A website dedicated to good vibes. Here you can find inspirational quotes, and uplifting pictures.
-        Every day you can find tailor made content just for you.
-        Everything and anything to make your day at least a little bit better.
+        Welcome to goodness.com! A website dedicated to showcasing my front end skills as well as power of CSS Flexbox and JavaScript.
         
         Please click here to go to picture section of the website.
 
@@ -142,10 +140,7 @@
       <h3>Pictures</h3>
       <p>
         “A picture is worth a thousand words”
-        Welcome to our page dedicated to inspirational pictures.
-        Here every three days you can find selected uplifting pictures ranging from science (like space rockets) to spirituality(like old European Churches or LDS temples).
-         From nature to architecture. From stuffed animals to cup pictures. 
-         All the pictures are non-copyrighter. Users are more than welcome to print them and take inspiration for personalised pillows, cups or even phone cases.
+        Welcome to  page dedicated to inspirational pictures and for showcasing the power and flexibility of CSS.
       </p>
       <p>Images for the Page 2/The picture page</p>
         <img src="images/cub.jpg" alt="A lion cub">
@@ -155,9 +150,7 @@
       <h3>Quotes</h3>
       <p>
         "For many of us, inspiration is triggered by the quips and quotations of others." Emilee Day, The Complete Book of Inspirational Quotations. 
-        Welcome to our page dedicated to inspirational quotes. Here every three days you can find selected inspirational quotes ranging from science to spirituality.
-         From books and movies. From Church and community leaders to politicians and inspirational figures.
-         All the quotes here are non-copyrighter. Users are welcome to save them, or even print them as they like.
+         Welcome to  page dedicated to inspirational quotes and showcasing underated flexibility of CSS when working with text. 
       </p>
       <p>Images for the Page 3/The quote page</p>
         <img src="images/quotes.jpg" alt="Thinking man">
