--- a/goodness/contactus.html
+++ b/goodness/contactus.html
@@ -32,7 +32,7 @@
         <section id="about">
             <h2>Contact us</h2>
             <p>
-            If you happen to need any information or have an inquiry, please  contact us via form bellow:
+            An example of JavasCript usage in website creation :
             </p>
         </section>
     <form action="action_page.php">
